# client-server

./: CMakeLists.txt
clients/: ararat  client.cpp  server2
server/: ararat  calcul  client1  create  file1  lsdir  param  server.cpp  server2
